# netbox-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
netbox_cli/: __init__.py  app.py  cache.py  client.py  config.py  discovery.py  errors.py  mutations.py  parsing.py  profiles.py  query.py  render.py  search.py  settings.py
netbox_cli/repl/: __init__.py  commands.py  completer.py  help.py  metadata.py  shell.py  state.py
tests/: conftest.py  test_app.py  test_cache.py  test_client.py  test_config.py  test_discovery.py  test_parsing.py  test_query.py  test_render.py  test_repl_commands.py  test_repl_completer.py  test_repl_metadata.py  test_repl_shell.py  test_repl_state.py  test_search.py
