[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-cli"
version = "0.1.0"
description = "Read-only NetBox CLI with a classic command surface and an interactive shell."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "prompt-toolkit>=3.0,<4.0",
  "rich>=13.7,<14.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "respx>=0.21,<1.0",
]

[project.scripts]
netbox = "netbox_cli.app:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["netbox_cli*"]
