[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-explorer"
version = "0.3.0"
description = "NetBox CLI with discovery, queries, explicit create/update commands, and an interactive shell."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["netbox", "cli", "network-automation", "inventory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "PyYAML>=6.0,<7.0",
  "prompt-toolkit>=3.0,<4.0",
  "rich>=13.7,<14.0",
  "typer>=0.12,<1.0",
]

[project.urls]
Homepage = "https://github.com/fciarfella/netbox-cli"
Issues = "https://github.com/fciarfella/netbox-cli/issues"
Repository = "https://github.com/fciarfella/netbox-cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "respx>=0.21,<1.0",
]

[project.scripts]
netbox = "netbox_cli.app:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["netbox_cli*"]
